2018-10-09  Szabolcs Nagy  <szabolcs.nagy@arm.com>

	* libio/tst-readline.c (TIMEOUT): Define.

2018-10-22  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/syscall-names.list: Update kernel
	version to 4.19.

2018-09-18  Paul Eggert  <eggert@cs.ucla.edu>

	Fix tzfile low-memory assertion failure
	[BZ #21716]
	* time/tzfile.c (__tzfile_read): Check for memory exhaustion
	when registering time zone abbreviations.

2018-08-31  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #20271]
	* include/stdio.h (__libc_fatal): Mention newline in comment.
	* grp/initgroups.c (internal_getgrouplist): Add missing newline.
	* nptl/pthread_cond_wait.c (__pthread_cond_wait_common): Likewise.
	* nscd/initgrcache.c (addinitgroupsX): Likewise.
	* nss/nsswitch.c (__nss_next2): Likewise.
	* sysdeps/aarch64/dl-irel.h (elf_irela): Likewise.
	* sysdeps/arm/dl-irel.h (elf_irel): Likewise.
	* sysdeps/generic/unwind-dw2.c (execute_cfa_program): Likewise.
	* sysdeps/i386/dl-irel.h (elf_irel): Likewise.
	* sysdeps/powerpc/powerpc32/dl-irel.h (elf_irel): Likewise.
	* sysdeps/powerpc/powerpc64/dl-irel.h (elf_irel): Likewise.
	* sysdeps/s390/dl-irel.h (elf_irel): Likewise.
	* sysdeps/sparc/sparc32/dl-irel.h (elf_irel): Likewise.
	* sysdeps/sparc/sparc64/dl-irel.h (elf_irel): Likewise.
	* sysdeps/x86_64/dl-irel.h (elf_irel): Likewise.
	* sysdeps/nptl/futex-internal.h (futex_wake): Likewise.
	* sysdeps/unix/sysv/linux/netlink_assert_response.c
	(__netlink_assert_response): Likewise.

2018-08-28  Florian Weimer  <fweimer@redhat.com>

	[BZ #23520]
	nscd: Fix use-after-free in addgetnetgrentX and its callers.
	* nscd/netgroupcache.c
	(addgetnetgrentX): Add tofreep parameter.  Do not free
	heap-allocated buffer.
	(addinnetgrX): Free buffer allocated bt addgetnetgrentX.
	(addgetnetgrentX_ignore): New function.
	(addgetnetgrent): Call it.
	(readdgetnetgrent): Likewise.

2018-08-16  DJ Delorie  <dj@delorie.com>

	* malloc/malloc.c (_int_free): Check for corrupt prev_size vs size.